--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx --watch -r dotenv/config src/main.ts",
+    "dev": "tsx watch -r dotenv/config src/main.ts",
     "db:start": "docker-compose up -d",
     "db:stop": "docker-compose down"
   },
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "pino-pretty": "^11.2.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   }
