feat: products (controller - model) http test

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,10 @@
-PORT=8000
+# Pino loggin configuration
 LOG_ENABLED=false
 LOG_LEVEL=info
+
+# Server configuration
+HOST=localhost
+PORT=8000
+
+# Database configuration
 DATABASE_URL="mongodb://localhost:27017/{your-database}"
