--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch -r dotenv/config src/main.ts",
+    "dev": "tsx watch src/main.ts | pino-pretty",
     "db:start": "docker-compose up -d",
     "db:stop": "docker-compose down"
   },
