--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/main.ts | pino-pretty",
-    "db:start": "docker-compose up -d",
-    "db:stop": "docker-compose down"
+    "db:up": "docker-compose up -d",
+    "db:down": "docker-compose down"
   },
   "keywords": [],
   "author": "",
