--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "helmet": "^7.1.0",
     "mongoose": "^8.5.1",
-    "pino": "^9.3.1"
+    "pino": "^9.3.1",
+    "zod": "^3.23.8",
+    "zod-express-middleware": "^1.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
