--- a/server/package.json
+++ b/server/package.json
@@ -6,25 +6,35 @@
   "scripts": {
     "dev": "tsx watch src/main.ts | pino-pretty",
     "db:up": "docker-compose up -d",
-    "db:down": "docker-compose down"
+    "db:down": "docker-compose down",
+    "gen:openapi": "tsp --config ./tsp/tspconfig.yaml compile ./tsp",
+    "deps:check": "npx npm-check-updates",
+    "deps:upd": "npx npm-check-updates -u && pnpm install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@typespec/compiler": "^0.58.1",
+    "@typespec/http": "^0.58.0",
+    "@typespec/openapi": "^0.58.0",
+    "@typespec/openapi3": "^0.58.0",
+    "@typespec/rest": "^0.58.0",
+    "@typespec/versioning": "^0.58.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^8.5.1",
-    "pino": "^9.3.1",
-    "zod": "^3.23.8",
-    "zod-express-middleware": "^1.4.0"
+    "mongoose": "^8.5.2",
+    "pino": "^9.3.2",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "pino-pretty": "^11.2.1",
-    "tsx": "^4.16.2",
-    "typescript": "^5.5.3"
+    "@types/swagger-ui-express": "^4.1.6",
+    "pino-pretty": "^11.2.2",
+    "tsx": "^4.16.5",
+    "typescript": "^5.5.4"
   }
 }
