--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -27,5 +27,8 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "rule": {
+    "no-restricted-imports": "warn"
+  }
 }
