--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
     "gen:swagger": "tsp --config ./swagger/tspconfig.yaml compile ./swagger",
-    "gen:schemas": "rm -rf src/schemas && kubb --config kubb.config.ts",
+    "gen:schemas": "rimraf src/schemas && kubb --config kubb.config.ts && rimraf src/schemas/schemas",
     "deps:check": "npx npm-check-updates",
     "deps:upd": "npx npm-check-updates -u && pnpm install"
   },
@@ -34,14 +34,18 @@
     "express-async-errors": "^3.1.1",
     "mongoose": "^8.5.2",
     "pino": "^9.3.2",
+    "rimraf": "^6.0.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/swagger-ui-express": "^4.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "eslint": "^9.8.0",
     "pino-pretty": "^11.2.2",
     "tsx": "^4.16.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1"
   }
 }
