--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/main.ts | pino-pretty",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
     "gen:swagger": "tsp --config ./swagger/tspconfig.yaml compile ./swagger",
@@ -42,10 +45,14 @@
     "@types/express": "^4.17.21",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@vitest/ui": "^2.0.5",
     "eslint": "^9.8.0",
     "pino-pretty": "^11.2.2",
+    "supertest": "^7.0.0",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.1"
+    "typescript-eslint": "^8.0.1",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.0.5"
   }
 }
