--- a/server/.env.example
+++ b/server/.env.example
@@ -8,3 +8,4 @@ PORT=8000
 
 # Database configuration
 DATABASE_URL="mongodb://localhost:27017/{your-database}"
+DATABASE_URL_TEST="mongodb://localhost:27017/{your-database}-test"
