--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -27,7 +27,7 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "src/schemas/**/*"],
+  "exclude": ["node_modules"],
   "rule": {
     "no-restricted-imports": "warn"
   }
