--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.5.2",
     "pino": "^9.3.2",
     "rimraf": "^6.0.1",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
