feat(mono script): add some script to run in parallel

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts | pino-pretty",
+    "build": "rimraf dist && tsc --build",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
