--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "pnpm --parallel start",
     "dev": "pnpm --parallel dev",
-    "build": "pnpm --parallel build"
+    "dev:client": "pnpm --filter client dev",
+    "dev:server": "pnpm --filter server dev",
+    "start:client": "pnpm --filter client start",
+    "build": "pnpm --parallel build",
+    "build:client": "pnpm --filter client build",
+    "build:server": "pnpm --filter server build"
   },
   "keywords": [],
   "author": "",
