--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -6,22 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "gen:kubb": "kubb --config kubb.config.ts"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@kubb/cli": "^2.25.1",
-    "@kubb/core": "^2.25.1",
-    "@kubb/oas": "^2.25.1",
-    "@kubb/plugin-oas": "^2.25.1",
-    "@kubb/swagger": "^2.25.1",
-    "@kubb/swagger-swr": "^2.25.1",
-    "@kubb/swagger-ts": "^2.25.1",
-    "@kubb/swagger-zod": "^2.25.1",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18",
-    "rimraf": "^6.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
