--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:^",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "animate.css": "^4.1.1",
+    "jiti": "^1.21.6",
+    "lucide-react": "^0.439.0",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
