--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
