--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:^",
+    "@repo/contract": "workspace:^",
     "@t3-oss/env-nextjs": "^0.11.1",
     "animate.css": "^4.1.1",
     "jiti": "^1.21.6",
