--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -17,12 +17,6 @@
     "gen:kubb": "kubb --config kubb.config.ts"
   },
   "dependencies": {
-    "@typespec/compiler": "^0.58.1",
-    "@typespec/http": "^0.58.0",
-    "@typespec/openapi": "^0.58.0",
-    "@typespec/openapi3": "^0.58.0",
-    "@typespec/rest": "^0.58.0",
-    "@typespec/versioning": "^0.58.0",
     "@kubb/cli": "^2.25.1",
     "@kubb/core": "^2.25.1",
     "@kubb/plugin-oas": "^2.25.1",
@@ -30,6 +24,13 @@
     "@kubb/swagger-swr": "^2.25.1",
     "@kubb/swagger-ts": "^2.25.1",
     "@kubb/swagger-zod": "^2.25.1",
+    "@typespec/compiler": "^0.58.1",
+    "@typespec/http": "^0.58.0",
+    "@typespec/openapi": "^0.58.0",
+    "@typespec/openapi3": "^0.58.0",
+    "@typespec/rest": "^0.58.0",
+    "@typespec/versioning": "^0.58.0",
+    "swr": "^2.2.5",
     "zod": "^3.23.8"
   }
 }
