--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/ui": "workspace:^",
     "@repo/contract": "workspace:^",
+    "@repo/ui": "workspace:^",
     "@t3-oss/env-nextjs": "^0.11.1",
     "animate.css": "^4.1.1",
     "jiti": "^1.21.6",
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
